@@ -87,6 +87,10 @@ Use sexagesimal format HH:MM:SS.MICROSECONDS for time values.
 Prettify the format of the displayed values, it corresponds to the
 options "-unit -prefix -byte_binary_prefix -sexagesimal".
 
+@item -print_format @var{format}
+Set the output printing format.
+Current available formats are "default" and "json".
+
 @item -show_format
 Show information about the container format of the input multimedia
 stream.
